--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y git gcc python3-dev && rm -rf /var/lib/
 RUN git config --global user.email "vivasilevskiy_1@edu.hse.ru" && \
     git config --global user.name "MLOps Bot"
 
-COPY pyproject.toml .
+COPY pyproject.toml poetry.lock .
 
 RUN pip install --upgrade pip
 RUN pip install poetry
